--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
         
         <section class="section-meals">
-            <ul class="meals-showcase">
+            <ul class="meals-showcase clearfix">
                 <li> 
                     <figure class="meal-photo">
                         <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -97,7 +97,7 @@
                 </li>
             
             </ul>            
-            <ul class="meals-showcase">
+            <ul class="meals-showcase clearfix">
                 <li> 
                     <figure class="meal-photo">
                         <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
