Testimonial Section Made

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </section>
         
         
-        <section class="testimonials">
+        <section class="section-testimonials">
             <div class="row"> 
                 <h2> Our customers can't live without us</h2> 
             </div>
