--- a/index.html
+++ b/index.html
@@ -261,18 +261,18 @@
             </div>
             <div class="row">
                 <div class="col span-1-of-3">
-                    <div class="plan">
+                    <div class="plan-box">
                         <div>
                             <h3> Premium </h3>
-                            <p class="plan-price"> 399$ per month </p>
+                            <p class="plan-price"> 399$ <span> per month </span> </p>
                             <p class="plan-price-meal"> That's only $14.90 per meal </p>
                         </div>
                         <div>
                             <ul>
-                                <li>  <i class="ion-ios-checkmark-empty"></i> 1 meal every day </li>
-                                <li>  <i class="ion-ios-checkmark-empty"></i> Order 24/7 </li>
-                                <li>  <i class="ion-ios-checkmark-empty"></i> Access to newest creations </li>
-                                <li>  <i class="ion-ios-checkmark-empty"></i> Free delivery </li>  
+                                <li>  <i class="ion-ios-checkmark-empty icon-small"></i> 1 meal every day </li>
+                                <li>  <i class="ion-ios-checkmark-empty icon-small"></i> Order 24/7 </li>
+                                <li>  <i class="ion-ios-checkmark-empty icon-small"></i> Access to newest creations </li>
+                                <li>  <i class="ion-ios-checkmark-empty icon-small"></i> Free delivery </li>  
                             </ul>
                         </div>
                         <div>
@@ -281,18 +281,18 @@
                     </div>
                 </div>
                 <div class="col span-1-of-3">
-                    <div class="plan">
+                    <div class="plan-box">
                         <div>
                             <h3> Pro </h3>
-                            <p class="plan-price"> 149$ per month </p>
+                            <p class="plan-price"> 149$ <span> per month </span> </p>
                             <p class="plan-price-meal"> That's only $13.30 per meal </p>
                         </div>
                         <div>
                             <ul>
-                                <li>  <i class="ion-ios-checkmark-empty"></i> 1 meal 10 days/month </li>
-                                <li>  <i class="ion-ios-checkmark-empty"></i> Order 24/7 </li>
-                                <li>  <i class="ion-ios-checkmark-empty"></i> Access to newest creations </li>
-                                <li>  <i class="ion-ios-checkmark-empty"></i> Free delivery </li>  
+                                <li>  <i class="ion-ios-checkmark-empty icon-small"></i> 1 meal 10 days/month </li>
+                                <li>  <i class="ion-ios-checkmark-empty icon-small"></i> Order 24/7 </li>
+                                <li>  <i class="ion-ios-checkmark-empty icon-small"></i> Access to newest creations </li>
+                                <li>  <i class="ion-ios-checkmark-empty icon-small"></i> Free delivery </li>  
                             </ul>
                         </div>
                         <div>
@@ -301,18 +301,18 @@
                     </div>
                 </div>
                 <div class="col span-1-of-3">
-                    <div class="plan">
+                    <div class="plan-box">
                         <div>
                             <h3> Starter </h3>
-                            <p class="plan-price"> 19$ per meal </p>
-                            <p class="plan-price-meal">  </p>
+                            <p class="plan-price"> 19$ <span> per meal </span> </p>
+                            <p class="plan-price-meal"> &nbsp; </p>
                         </div>
                         <div>
                             <ul>
-                                <li>  <i class="ion-ios-checkmark-empty"></i> 1 meal </li>
-                                <li>  <i class="ion-ios-checkmark-empty"></i> Order from 8 am to 12 pm </li>
-                                <li>  <i class="ion-ios-close-empty"></i> </li>
-                                <li>  <i class="ion-ios-checkmark-empty"></i> Free delivery </li>  
+                                <li>  <i class="ion-ios-checkmark-empty icon-small"></i> 1 meal </li>
+                                <li>  <i class="ion-ios-checkmark-empty icon-small"></i> Order from 8 am to 12 pm </li>
+                                <li>  <i class="ion-ios-close-empty icon-small"></i> </li>
+                                <li>  <i class="ion-ios-checkmark-empty icon-small"></i> Free delivery </li>  
                             </ul>
                         </div>
                         <div>
